created new product submission form component, product list component, read, delete, and search functions, product details component, and fixed bugs due to misuse of null on currentProduct

--- a/src/app/components/product-create/product-create.component.html
+++ b/src/app/components/product-create/product-create.component.html
@@ -1,1 +1,35 @@
-<p>product-create works!</p>
+<div style="width: 500px; margin: auto">
+  <div class="submit-form">
+    <div *ngIf="!submitted">
+      <div class="form-group">
+        <label for="name">Name</label
+        ><input
+          type="text"
+          class="form-control"
+          id="name"
+          required
+          [(ngModel)]="product.name"
+          name="name"
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="">Description</label>
+        <input
+          class="form-control"
+          id="description"
+          required
+          [(ngModel)]="product.description"
+          name="description"
+        />
+      </div>
+
+      <button class="btn btn-success">Create</button>
+    </div>
+
+    <div>
+      <h3></h3>
+      <button class="btn btn-success" (click)="newProduct()">New..</button>
+    </div>
+  </div>
+</div>
